2025-04-07  Zhengyi Fu  <i@fuzy.me>

	Improve flymake configurations

	* init.el (+nxml-mode--flymake, +cc-mode--hook): Fix typo
	(`flymake-diagnostic-functions').
	(flymake-systemd): Autoload this function.
	(+systemd-mode--setup): New function.  Added to `systemd-mode-hook'.

2025-04-06  Zhengyi Fu  <i@fuzy.me>

	Update `diff-hl' state after committing with vc-dwim

	* init.el <diff-hl>: Add `diff-hl-update' to
	`vc-dwim-post-commit-hook'.

2025-04-04  Zhengyi Fu  <i@fuzy.me>

	* init.el (meow-setup): Fix key binding for `meow-universal-argument'.

2025-04-04  Zhengyi Fu  <i@fuzy.me>

	* init.el (straight-magit-package-status): Fix `interactive' form.

2025-04-03  Zhengyi Fu  <i@fuzy.me>

	* init.el (send-password-to-buffer-process): New command.

2025-04-03  Zhengyi Fu  <i@fuzy.me>

	* init.el <eglot>: Add --query-driver= arguments to clangd.

2025-04-03  Zhengyi Fu  <i@fuzy.me>

	* init.el (buffer-list-update-hook): Add `recentf-track-opened-file'.

2025-04-03  Zhengyi Fu  <i@fuzy.me>

	* init.el <eglot>: Bind "C-c C-a" to `eglot-code-actions'.

2025-04-01  Zhengyi Fu  <i@fuzy.me>

	Remove command `+citre-enable'

	* init.el (+citre--get-major-modes-for-citre): Remove function.
	(+citre-enable): Remove command.  Use
	`enable-minor-mode-in-project' instead.

2025-04-01  Zhengyi Fu  <i@fuzy.me>

	Remove command `prism-project'

	* init.el (prism-project): Remove commmand.  Use
	`enable-minor-mode-in-project' instead.
	(prism-project-mode-history): Remove variable.

2025-04-01  Zhengyi Fu  <i@fuzy.me>

	* init.el (meow-setup): Bind "`" to `meow-universal-argument'.

2025-04-01  Zhengyi Fu  <i@fuzy.me>

	Improve `enable-minor-mode-in-project'

	* site-lisp/dotemacs-core.el (dotemacs--project-hook-function):
	Use args.  Add docstring.
	(project-add-hook!): Add docstring to the hook function.
	(project-remove-hook!): Add docstring.  Add default value for
	PROJECT.

2025-03-31  Zhengyi Fu  <i@fuzy.me>
